<resources>

    <string name="app_name">LBL Lead UP</string>


    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="title">Title</string>
    <string name="click">Click</string>
    <string name="funds_transfer">Funds Transfer</string>
    <string name="eReport">eReport</string>
    <string name="views">Views</string>
    <string name="invites">Invites</string>
    <string name="login">LOGIN</string>
    <string name="lorem">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.</string>
    <string name="email_address">Email address</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="text">Text</string>
    <string name="app_not_found">App Not Found</string>
    <string name="shop_now">Shop Now</string>
    <string name="expires">Expires</string>
    <string name="date_num">00-00-0000</string>
    <string name="send">Send</string>
    <string name="brands">Brands</string>
    <string name="vendors">Vendors</string>
    <string name="view_all">View All</string>
    <string name="request">Request</string>
    <string name="goto_web">Goto Website</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="name">John Doe</string>
    <string name="name_text">Name</string>
    <string name="time">00:00:00</string>
    <string name="duration">Duration</string>
    <string name="category">Category</string>
    <string name="coupons">Coupons</string>
    <string name="products">Products</string>
    <string name="requested_amount">Requested Amount</string>
    <string name="share">Share</string>
    <string name="message">Message</string>
    <string name="phone_no">00 000 000000</string>
    <string name="view_profile">View Profile</string>
    <string name="earning_dashboard">EARNING DASHBOARD</string>
    <string name="earnings">EARNINGS</string>
    <string name="earnings_small">Earning</string>
    <string name="earning_small">Earning</string>
    <string name="shop_earn">Shop &amp; Earn</string>
    <string name="my_leads">My Leads</string>
    <string name="my_network">My Network</string>
    <string name="network">Network</string>
    <string name="select_depart">Select Department</string>
    <string name="select_method">Select Method</string>
    <string name="select_category">Select Category</string>
    <string name="zero_dollar">$ 00</string>
    <string name="fund_transfer">FUND TRANSFER</string>
    <string name="coupon_discount">COUPONS &amp; DISCOUNT</string>
    <string name="project_income">Projected Income</string>
    <string name="share_earn">Share &amp; Earn</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="fell_free_contact">Feel free to send us any queries.</string>
    <string name="my_income">My Income</string>
    <string name="click_earn">Click &amp; Earn</string>
    <string name="annoucement">ANNOUNCEMENTS</string>
    <string name="date">date</string>
    <string name="watch_earn">Watch &amp; Earn</string>
    <string name="invite_earn">Invite &amp; Earn</string>
    <string name="ten_thousand_no">10,000</string>
    <string name="earning_from">Earning From</string>
    <string name="loading">Loading...</string>
    <string name="life_time">Lifetime</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="todays">Today\'s</string>
    <string name="all_time_earn">All time Earning</string>
    <string name="this_month_earn">This Month Earning</string>
    <string name="thousand">1000</string>
    <string name="zero">0</string>
    <string name="clicks">Clicks</string>
    <string name="watch">Watch</string>
    <string name="clicks_earning">Clicks Earning</string>
    <string name="video_earning">Video Earning</string>
    <string name="network_earning">Network Earning</string>
    <string name="share_earning">Share Earning</string>
    <string name="total_prospects">TOTAL PROSPECTS</string>
    <string name="add_new">ADD NEW</string>
    <string name="save">Save</string>
    <string name="search">Search...</string>
    <string name="setting">Setting</string>
    <string name="by_phone">By Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="whats_app_number">What\'s App Number</string>
    <string name="by_manually">Manually</string>
    <string name="invite_to_network">Invite to Network</string>
    <string name="ten_dollar">10 $</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="chines">Chinese</string>
    <string name="french">French</string>
    <string name="current_earning">Current Earning</string>
    <string name="error_on_request_failed">We are sorry! Server is not responding..</string>
    <string name="no_internet">No Internet Connection.</string>
    <string name="in_valid_email">Invalid Email Address.</string>
    <string name="default_notification_channel_id">4655</string>
    <string name="Application">Application</string>
    <string name="install">Install</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_mismatch">Password mismatch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
