<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/img_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/login_top"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_logo"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                android:textSize="25sp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/user_id"
                android:layout_below="@+id/tv_login"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/et_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/colorAccent"
                android:layout_below="@id/text_layout_email">

                <EditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:background="@drawable/gradiant_round"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/text_layout_pass"/>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:background="@drawable/gradiant_round"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/btn_login"/>

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_sign_up"
                android:layout_centerHorizontal="true"
                android:text="@string/forgot_pass"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"/>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>